# physical-models

./: .gitignore  README.md  pyproject.toml
classical_mechanics/: kinematics.py
classical_mechanics/tests/: test_kinematics.py
utils/: latex.py  quantities.py
utils/tests/: test_quantities.py
